05_istio/harbor/harbor-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: harbor-gateway
  namespace: harbor
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-harbor
      protocol: HTTP
    hosts:
    - harbor.c0.kube8.ga
  - port:
      number: 443
      name: https-harbor
      protocol: HTTPS
    hosts:
    - harbor.c0.kube8.ga
    tls:
      credentialName: harbor-ingress-cert
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: core-harbor-virtual-service
  namespace: harbor
spec:
  hosts:
  - harbor.c0.kube8.ga
  gateways:
  - harbor-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    route:
    - destination:
        host: harbor-harbor-core.harbor.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /chartrepo/
    route:
    - destination:
        host: harbor-harbor-core.harbor.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /c/
    route:
    - destination:
        host: harbor-harbor-core.harbor.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /v2/
    route:
    - destination:
        host: harbor-harbor-core.harbor.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /service/
    route:
    - destination:
        host: harbor-harbor-core.harbor.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: harbor-harbor-portal.harbor.svc.cluster.local
        port:
          number: 80
